Bug 1128467 - Take scale factors into account when computing image size even if we aren't snapping. r=roc